# OCL-VideoProcessingLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
examples/: main.cpp
include/: aframe.hpp  frame.hpp  sync.hpp  vframe.hpp
lib/FFMPEG/: CMakeLists.txt  run.sh
src/: aframe.cpp  frame.cpp  sync.cpp  vframe.cpp
